# ChangeLog for sys-apps/microcode-ctl
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.15 2006/01/22 21:09:38 vapier Exp $

*microcode-ctl-1.13 (22 Jan 2006)

  22 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.13.ebuild:
  Version bump #119821 by Alexander Skwar.

  26 Dec 2005; Mike Frysinger <vapier@gentoo.org>
  files/microcode_ctl.conf.d, files/microcode_ctl.rc:
  Add an option to unload the microcode kernel module after we are done using
  it #116790 by ilGino.

*microcode-ctl-1.12 (15 Sep 2005)

  15 Sep 2005; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.12.ebuild:
  Version bump.

  09 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  microcode-ctl-1.11.ebuild:
  etc/conf.d was not always being created

*microcode-ctl-1.11 (14 Nov 2004)

  14 Nov 2004; Mike Frysinger <vapier@gentoo.org> files/microcode_ctl.rc,
  +microcode-ctl-1.11.ebuild:
  Version bump and init.d update #70781 by Christian Skarby.

*microcode-ctl-1.10 (30 Oct 2004)

  30 Oct 2004; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.10.ebuild:
  Version bump #69360 by Christian Skarby.

*microcode-ctl-1.09 (16 Oct 2004)

  16 Oct 2004; Mike Frysinger <vapier@gentoo.org>
  +microcode-ctl-1.09.ebuild:
  Version bump #67786 by Christian Skarby.

*microcode-ctl-1.08 (31 Aug 2004)

  31 Aug 2004; Mike Frysinger <vapier@gentoo.org> +files/microcode_ctl.conf.d,
  +files/microcode_ctl.rc, +microcode-ctl-1.08.ebuild:
  Version bump and init.d scripts #60396 by Michael Cramer.

*microcode-ctl-1.07-r1 (05 Jun 2004)

  05 Jun 2004; Daniel Black <dragonheart@gentoo.org>
  +microcode-ctl-1.07-r1.ebuild:
  Fixed to include udev support. Thanks to Jason Wallace
  <jason_wallace@myrealbox.com> in bug #52982

*microcode-ctl-1.07 (24 May 2004)

  24 May 2004; Daniel Black <dragonheart@gentoo.org>
  +microcode-ctl-1.07.ebuild, -microcode-ctl-1.06.ebuild,
  microcode-ctl-1.06-r1.ebuild: