@@ -1,18 +1,50 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 bd1f745b51f20a318df3f2404d986a01 ChangeLog 3057
-MD5 717fe335882b48bdae85f62c28883120 files/digest-microcode-ctl-1.12 70
-MD5 a7d8c4dfe4ff8d179615a3bd1e29cb0d files/digest-microcode-ctl-1.13 70
+AUX microcode_ctl.conf.d 210 RMD160 0c261a3d2e806ddc3b2ac34b27fccada6574e1db SHA1 38d6d7ce1f837346bcb3c5f1d1e35f4a917341e5 SHA256 4297faf0863cd7dd952c666641d67eac196a8521ff17ab95574f299df71758bd
 MD5 6458858fff894d2d77aae536c697ebf5 files/microcode_ctl.conf.d 210
+RMD160 0c261a3d2e806ddc3b2ac34b27fccada6574e1db files/microcode_ctl.conf.d 210
+SHA256 4297faf0863cd7dd952c666641d67eac196a8521ff17ab95574f299df71758bd files/microcode_ctl.conf.d 210
+AUX microcode_ctl.rc 761 RMD160 a83d77d1a13fb1dca7cd38990eddd1f40c3b74f0 SHA1 0fdcc48962d2ac83a4ce676863d9ca55df1eb11b SHA256 c9589225863d44c9fd3b382764138cc5e57a775e40a27055af85f1f98605ddf9
 MD5 44cffc4c0ce1036aa22076db246dbd14 files/microcode_ctl.rc 761
-MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
+RMD160 a83d77d1a13fb1dca7cd38990eddd1f40c3b74f0 files/microcode_ctl.rc 761
+SHA256 c9589225863d44c9fd3b382764138cc5e57a775e40a27055af85f1f98605ddf9 files/microcode_ctl.rc 761
+DIST microcode_ctl-1.12.tar.gz 239762 RMD160 62f4b903db1365a2a0f7d64665eb1164a8d1390f SHA1 2800593e0513fd855cdebe30882d33719f757089 SHA256 968e753d8f04381722d8e008b093cd48a2452ec72b39e0137eab3c2a81f36af0
+DIST microcode_ctl-1.13.tar.gz 261039 RMD160 d3700ca58c4d83f675b936aed0bb5b7df9bccf39 SHA1 274363246b53bece91ae538a31064334775cec33 SHA256 5b05b606ebd10843b07115bb364bb190d31975c64e30461528c45a65a0bc78ab
+DIST microcode_ctl-1.14.tar.gz 264540 RMD160 169886cecfcfd74a583ba792b7968f326f8bb45a SHA1 7759a6a5c971b52e0e9849e132ab887ee9201aaa SHA256 58a325d1b2c97aadda41024858680debd5441f6c1d3c1b03c5678f471dfef1ec
+EBUILD microcode-ctl-1.12.ebuild 1167 RMD160 1b2e5928c7690ae692901ad2325c63f11308fe67 SHA1 6eb57861a5adfae9d5cc29bf66aedde9bb0364ab SHA256 0d88845c9a9b84c858f8371bc0451e4005e2f571fc859e0b1ff7577a2a98dd46
 MD5 175576bc21a80463588d75ba9bce15a7 microcode-ctl-1.12.ebuild 1167
+RMD160 1b2e5928c7690ae692901ad2325c63f11308fe67 microcode-ctl-1.12.ebuild 1167
+SHA256 0d88845c9a9b84c858f8371bc0451e4005e2f571fc859e0b1ff7577a2a98dd46 microcode-ctl-1.12.ebuild 1167
+EBUILD microcode-ctl-1.13.ebuild 1169 RMD160 2521a250b25a2b95a3f75895bd93e02df7dd25a0 SHA1 8cead4d0a7130359215c40a084a84b5c21cb19c7 SHA256 8934f1bd06a6bc67bc9a576481a9153b792c4c3a78f1cbd2670e7e5c02342393
 MD5 6b3a8e92197aabfb519e29afd0dde633 microcode-ctl-1.13.ebuild 1169
+RMD160 2521a250b25a2b95a3f75895bd93e02df7dd25a0 microcode-ctl-1.13.ebuild 1169
+SHA256 8934f1bd06a6bc67bc9a576481a9153b792c4c3a78f1cbd2670e7e5c02342393 microcode-ctl-1.13.ebuild 1169
+EBUILD microcode-ctl-1.14.ebuild 1169 RMD160 56621673ee749a60615d368e50a2f17e4041f4d6 SHA1 4a777165d85227b460a2fc8441c0feebdc68cc65 SHA256 57e4d6a3a5234d508384f328712a39b250dfb4d4987237470a23a4d2ff7dd880
+MD5 309614ce2ec96c4d8d5da7f93765edf2 microcode-ctl-1.14.ebuild 1169
+RMD160 56621673ee749a60615d368e50a2f17e4041f4d6 microcode-ctl-1.14.ebuild 1169
+SHA256 57e4d6a3a5234d508384f328712a39b250dfb4d4987237470a23a4d2ff7dd880 microcode-ctl-1.14.ebuild 1169
+MISC ChangeLog 3211 RMD160 f2cfd982ac32f7260e96ad96d6100738e71d552c SHA1 8f6db49ed76563658496cf0ef47b0ef874b7e2eb SHA256 4826dd6d2cdc6dab2c34d20144b0a64be84e9dce51013156e641243d88951c5a
+MD5 f75581019d2220bf5fd361dd991a282e ChangeLog 3211
+RMD160 f2cfd982ac32f7260e96ad96d6100738e71d552c ChangeLog 3211
+SHA256 4826dd6d2cdc6dab2c34d20144b0a64be84e9dce51013156e641243d88951c5a ChangeLog 3211
+MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
+RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
+SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
+MD5 4d9193ff60f5856425a39af884ece319 files/digest-microcode-ctl-1.12 256
+RMD160 436c7440c918df418c264db4045e0ffb737799a2 files/digest-microcode-ctl-1.12 256
+SHA256 28ce39c23be75ae570fa0d0768e6e7cfaef57b1dac332fc6be3f1f35f59d6dd0 files/digest-microcode-ctl-1.12 256
+MD5 8a38ac7767c31a3c132efaaa8570d8fe files/digest-microcode-ctl-1.13 256
+RMD160 5f7c62d7528afd40db59018d38bf91e61e57d39d files/digest-microcode-ctl-1.13 256
+SHA256 c3a3107415aa7eae447c9480a5ddc40868fe730a6962429b8aa581cd631d5e47 files/digest-microcode-ctl-1.13 256
+MD5 ac0161e22d06a24d5a20669e8f81edc2 files/digest-microcode-ctl-1.14 256
+RMD160 010353cb52817d4ef3ff662ca5315e23355172e8 files/digest-microcode-ctl-1.14 256
+SHA256 a945cf1e3c8dbec4513579f84c6f9c5feb3aeae17d78a03f1863e1273b9d5955 files/digest-microcode-ctl-1.14 256
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFD0/Uk2+ySkm8kpY0RAuwvAJ9cnhni4LgtYcDE1bg/HDL0LcmxQgCgjrrh
-ie/lgSOp7bx5PcZO4BJY3GU=
-=nQfy
+iD8DBQFE+NtUamhnQswr0vIRAt43AJoCIgraYzXSow6IYWAwBiA0dF4aZQCfTeEL
+rFbcWZma083FuuItzCfuYwE=
+=nUeY
 -----END PGP SIGNATURE-----
