@@ -1,1 +1,3 @@
 MD5 07d5f64b7c84a00663425089221d5fb0 microcode_ctl-1.12.tar.gz 239762
+RMD160 62f4b903db1365a2a0f7d64665eb1164a8d1390f microcode_ctl-1.12.tar.gz 239762
+SHA256 968e753d8f04381722d8e008b093cd48a2452ec72b39e0137eab3c2a81f36af0 microcode_ctl-1.12.tar.gz 239762
