@@ -1,1 +1,3 @@
 MD5 5855e60b753a711169f1b4dbdcc8d768 microcode_ctl-1.13.tar.gz 261039
+RMD160 d3700ca58c4d83f675b936aed0bb5b7df9bccf39 microcode_ctl-1.13.tar.gz 261039
+SHA256 5b05b606ebd10843b07115bb364bb190d31975c64e30461528c45a65a0bc78ab microcode_ctl-1.13.tar.gz 261039
