@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/microcode-ctl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.15 2006/01/22 21:09:38 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/microcode-ctl/ChangeLog,v 1.16 2006/09/02 01:15:30 vapier Exp $
+
+*microcode-ctl-1.14 (02 Sep 2006)
+
+  02 Sep 2006; Mike Frysinger <vapier@gentoo.org>
+  +microcode-ctl-1.14.ebuild:
+  Version bump #145857 by Nuno Lopes.
 
 *microcode-ctl-1.13 (22 Jan 2006)
 
